--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,10 +195,10 @@ You can use the freelance platforms mentioned above, create a profile, and start
     \nAnother way to get clients as a graphic designer is to go offline. Go to your local chamber of commerce, or spend some time walking around your town. Chances are you’ll see plenty of businesses who are in need of your graphic design skills. Whether it’s for a new logo, a brochure, or even company uniforms.
 
 You can try going to your local co-working space. These are usually filled with startups and other companies who are in need of the design skills you have.</string>
-    <string name="banner">399424024528292_399425471194814</string>
-    <string name="interstitial">399424024528292_399433981193963</string>
+    <!--<string name="banner">399424024528292_399425471194814</string>-->
+    <!--<string name="interstitial">399424024528292_399433981193963</string>-->
 
 
-    <!--<string name="banner">IMG_16_9_APP_INSTALL#607402693307934_607717893276414</string>-->
-    <!--<string name="interstitial">IMG_16_9_APP_INSTALL#607402693307934_607763939938476</string>-->
+    <string name="banner">IMG_16_9_APP_INSTALL#607402693307934_607717893276414</string>
+    <string name="interstitial">IMG_16_9_APP_INSTALL#607402693307934_607763939938476</string>
 </resources>
